2020-??-??   Ales Cepek <cepek@gnu.org>

	* new release 2.10

	* Added a new option --enable-extra-tests (default is no) to the
	configure.ac script. Extra gama-local test may be running
	substantially longer (for example see railway-control.gkf).

	* Removed obscure adjustment parameter
	'update-constraiend-parameters'. The update effected SqliteReader
	lib/gnu_gama/local/sqlitereader.cpp, classes LocalNetwork and
	GKFparser and file gnu-gama-data.xsd.

	* Removed gnu-gama-data.dtd and all its references (superseded by
	.xsd), several XML files were updated in tests/gama-g3 to use
	gnu-gama-data xsd definition.


	#######################################
	#  See ChangeLog.3 for older changes  #
	#######################################