@@ -24,9 +24,9 @@ clean-local-check:
 $(GAMA_RESULTS):
 	mkdir -p $(GAMA_RESULTS)
 
-gama-local-extra-tests.sh : $(GAMA_SCRIPT)/gama-local-extra-tests.in \
+gama-local-extra-tests.sh : $(GAMA_SCRIPT)/gama-local-extra-tests.sh_ \
 	      @top_srcdir@/tests/gama-local/gama-local-adjustment.sh
-	@$(do_subst) < $(GAMA_SCRIPT)/gama-local-extra-tests.in \
+	@$(do_subst) < $(GAMA_SCRIPT)/gama-local-extra-tests.sh_ \
 	             > gama-local-extra-tests.sh
 	@chmod +x gama-local-extra-tests.sh
 
