@@ -1,1 +1,1 @@
-EXTRA_DIST = gama-local-extra-tests.in
+EXTRA_DIST = gama-local-extra-tests.sh_
