@@ -44,12 +44,12 @@ clean-local-check:
 $(G3_RESULTS):
 	mkdir -p $(G3_RESULTS)
 
-gama-g3-adjustment.sh: $(G3_SCRIPT)/gama-g3-adjustment.in $(G3_OTHERS)
-	@$(do_subst) < $(G3_SCRIPT)/gama-g3-adjustment.in \
+gama-g3-adjustment.sh: $(G3_SCRIPT)/gama-g3-adjustment.sh_ $(G3_OTHERS)
+	@$(do_subst) < $(G3_SCRIPT)/gama-g3-adjustment.sh_ \
 	        > gama-g3-adjustment.sh
 	@chmod +x gama-g3-adjustment.sh
 
-gama-g3-xmllint-xsd.sh: $(G3_SCRIPT)/gama-g3-xmllint-xsd.in $(G3_OTHERS)
-	@$(do_subst)  < $(G3_SCRIPT)/gama-g3-xmllint-xsd.in \
+gama-g3-xmllint-xsd.sh: $(G3_SCRIPT)/gama-g3-xmllint-xsd.sh_ $(G3_OTHERS)
+	@$(do_subst)  < $(G3_SCRIPT)/gama-g3-xmllint-xsd.sh_ \
 	        > gama-g3-xmllint-xsd.sh
 	@chmod +x gama-g3-xmllint-xsd.sh
