@@ -78,96 +78,96 @@ clean-local-check:
 $(GAMA_RESULTS):
 	mkdir -p $(GAMA_RESULTS)
 
-gama-local-version.sh: $(GAMA_SCRIPT)/gama-local-version.in $(GAMA_OTHERS)
-	@$(do_subst) < $(GAMA_SCRIPT)/gama-local-version.in \
+gama-local-version.sh: $(GAMA_SCRIPT)/gama-local-version.sh_ $(GAMA_OTHERS)
+	@$(do_subst) < $(GAMA_SCRIPT)/gama-local-version.sh_ \
 	             > gama-local-version.sh
 	@chmod +x gama-local-version.sh
 
-gama-local-adjustment.sh: $(GAMA_SCRIPT)/gama-local-adjustment.in \
+gama-local-adjustment.sh: $(GAMA_SCRIPT)/gama-local-adjustment.sh_ \
 	                  $(GAMA_OTHERS)
-	@$(do_subst) < $(GAMA_SCRIPT)/gama-local-adjustment.in \
+	@$(do_subst) < $(GAMA_SCRIPT)/gama-local-adjustment.sh_ \
 	             > gama-local-adjustment.sh
 	@chmod +x gama-local-adjustment.sh
 
-gama-local-algorithms.sh: $(GAMA_SCRIPT)/gama-local-algorithms.in \
+gama-local-algorithms.sh: $(GAMA_SCRIPT)/gama-local-algorithms.sh_ \
 	                  $(GAMA_OTHERS)
-	@$(do_subst) < $(GAMA_SCRIPT)/gama-local-algorithms.in \
+	@$(do_subst) < $(GAMA_SCRIPT)/gama-local-algorithms.sh_ \
 	             > gama-local-algorithms.sh
 	@chmod +x gama-local-algorithms.sh
 
-gama-local-equivalents.sh: $(GAMA_SCRIPT)/gama-local-equivalents.in \
+gama-local-equivalents.sh: $(GAMA_SCRIPT)/gama-local-equivalents.sh_ \
 	                   $(GAMA_OTHERS)
-	@$(do_subst) < $(GAMA_SCRIPT)/gama-local-equivalents.in \
+	@$(do_subst) < $(GAMA_SCRIPT)/gama-local-equivalents.sh_ \
 	             > gama-local-equivalents.sh
 	@chmod +x gama-local-equivalents.sh
 
-gama-local-xml-results.sh: $(GAMA_SCRIPT)/gama-local-xml-results.in \
+gama-local-xml-results.sh: $(GAMA_SCRIPT)/gama-local-xml-results.sh_ \
 	                   $(GAMA_OTHERS)
-	@$(do_subst) < $(GAMA_SCRIPT)/gama-local-xml-results.in \
+	@$(do_subst) < $(GAMA_SCRIPT)/gama-local-xml-results.sh_ \
 	             > gama-local-xml-results.sh
 	@chmod +x gama-local-xml-results.sh
 
-gama-local-html.sh: $(GAMA_SCRIPT)/gama-local-html.in $(GAMA_OTHERS) \
+gama-local-html.sh: $(GAMA_SCRIPT)/gama-local-html.sh_ $(GAMA_OTHERS) \
                     gama-local-adjustment.sh
-	@$(do_subst) < $(GAMA_SCRIPT)/gama-local-html.in \
+	@$(do_subst) < $(GAMA_SCRIPT)/gama-local-html.sh_ \
 	             > gama-local-html.sh
 	@chmod +x gama-local-html.sh
 
-gama-local-xml-xml.sh: $(GAMA_SCRIPT)/gama-local-xml-xml.in $(GAMA_OTHERS) \
+gama-local-xml-xml.sh: $(GAMA_SCRIPT)/gama-local-xml-xml.sh_ $(GAMA_OTHERS) \
                        gama-local-adjustment.sh
-	@$(do_subst) < $(GAMA_SCRIPT)/gama-local-xml-xml.in \
+	@$(do_subst) < $(GAMA_SCRIPT)/gama-local-xml-xml.sh_ \
 	             > gama-local-xml-xml.sh
 	@chmod +x gama-local-xml-xml.sh
 
-gama-local-parameters.sh: $(GAMA_SCRIPT)/gama-local-parameters.in \
+gama-local-parameters.sh: $(GAMA_SCRIPT)/gama-local-parameters.sh_ \
 	                  $(GAMA_OTHERS)
-	@$(do_subst) < $(GAMA_SCRIPT)/gama-local-parameters.in \
+	@$(do_subst) < $(GAMA_SCRIPT)/gama-local-parameters.sh_ \
 	             > gama-local-parameters.sh
 	@chmod +x gama-local-parameters.sh
 
-gama-local-updated-xml.sh: $(GAMA_SCRIPT)/gama-local-updated-xml.in \
+gama-local-updated-xml.sh: $(GAMA_SCRIPT)/gama-local-updated-xml.sh_ \
 	                   $(GAMA_OTHERS)
-	@$(do_subst) < $(GAMA_SCRIPT)/gama-local-updated-xml.in \
+	@$(do_subst) < $(GAMA_SCRIPT)/gama-local-updated-xml.sh_ \
 	             > gama-local-updated-xml.sh
 	@chmod +x gama-local-updated-xml.sh
 
-gama-local-externs.sh: $(GAMA_SCRIPT)/gama-local-externs.in \
+gama-local-externs.sh: $(GAMA_SCRIPT)/gama-local-externs.sh_ \
 	               $(GAMA_OTHERS)
-	@$(do_subst) < $(GAMA_SCRIPT)/gama-local-externs.in \
+	@$(do_subst) < $(GAMA_SCRIPT)/gama-local-externs.sh_ \
 	             > gama-local-externs.sh
 	@chmod +x gama-local-externs.sh
 
 
 
 if GNU_GAMA_LOCAL_TEST_SQLITE_READER
-gama-local-sqlite-reader.sh: $(GAMA_SCRIPT)/gama-local-sqlite-reader.in \
+gama-local-sqlite-reader.sh: $(GAMA_SCRIPT)/gama-local-sqlite-reader.sh_ \
 	                     $(GAMA_OTHERS)
-	@$(do_subst) < $(GAMA_SCRIPT)/gama-local-sqlite-reader.in \
+	@$(do_subst) < $(GAMA_SCRIPT)/gama-local-sqlite-reader.sh_ \
 	             > gama-local-sqlite-reader.sh
 	@chmod +x gama-local-sqlite-reader.sh
 endif
 
 
 if GNU_GAMA_LOCAL_TEST_XMLLINT
-xmllint-gama-local-xsd.sh: $(GAMA_SCRIPT)/xmllint-gama-local-xsd.in \
+xmllint-gama-local-xsd.sh: $(GAMA_SCRIPT)/xmllint-gama-local-xsd.sh_ \
 	                   $(GAMA_OTHERS)
-	@$(do_subst) < $(GAMA_SCRIPT)/xmllint-gama-local-xsd.in \
+	@$(do_subst) < $(GAMA_SCRIPT)/xmllint-gama-local-xsd.sh_ \
 	             > xmllint-gama-local-xsd.sh
 	@chmod +x xmllint-gama-local-xsd.sh
 
 xmllint-gama-local-adjustment-xsd.sh: \
-	      $(GAMA_SCRIPT)/xmllint-gama-local-adjustment-xsd.in \
+	      $(GAMA_SCRIPT)/xmllint-gama-local-adjustment-xsd.sh_ \
 	      $(GAMA_OTHERS)
-	@$(do_subst) < $(GAMA_SCRIPT)/xmllint-gama-local-adjustment-xsd.in \
+	@$(do_subst) < $(GAMA_SCRIPT)/xmllint-gama-local-adjustment-xsd.sh_ \
 	             > xmllint-gama-local-adjustment-xsd.sh
 	@chmod +x xmllint-gama-local-adjustment-xsd.sh
 endif
 
 
 if GNU_GAMA_LOCAL_TEST_OCTAVE
-octave-gama-local.sh : $(GAMA_SCRIPT)/octave-gama-local.in \
+octave-gama-local.sh : $(GAMA_SCRIPT)/octave-gama-local.sh_ \
 	               $(GAMA_OTHERS) gama-local-adjustment.sh
-	@$(do_subst) < $(GAMA_SCRIPT)/octave-gama-local.in \
+	@$(do_subst) < $(GAMA_SCRIPT)/octave-gama-local.sh_ \
 	             > octave-gama-local.sh
 	@chmod +x octave-gama-local.sh
 endif
